# kuai-mvp-contract

./: README.md
contracts/kuai-mvp-contract/: Cargo.toml
contracts/kuai-mvp-contract/src/: entry.rs
tests/: Cargo.toml
tests/src/: tests.rs
types/: Cargo.toml
types/src/: kuai_mvp_data.rs
