[package]
name = "kuai-mvp-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
#json = "0.12.4"
types = { path = "../../types", default-features = false }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }


